♻️ refactor with JDK 21 & format code