@@ -4,7 +4,6 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @RestController
@@ -13,7 +12,7 @@ public class TomcatController {
    @GetMapping(value = "/hello")
    public Collection<String> sayHello() {
       return IntStream.range(0, 10)
-            .mapToObj(i -> "Hello number " + i)
-            .collect(Collectors.toList());
+            .mapToObj(i -> STR."Hello number \{i}")
+            .toList();
    }
 }
