@@ -12,7 +12,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class ArticleWorkflowService {
@@ -40,7 +39,7 @@ public class ArticleWorkflowService {
                Map<String, Object> variables = taskService.getVariables(task.getId());
                return new Article(task.getId(), (String) variables.get("author"), (String) variables.get("url"));
             })
-            .collect(Collectors.toList());
+            .toList();
    }
 
    @Transactional
